--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,7 +45,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="HomePage">
        <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0" columnstretch="0,1,9" rowminimumheight="10,0,0">
@@ -2617,6 +2617,12 @@ padding-left: 7px;
         </property>
         <item row="0" column="0">
          <widget class="QWidget" name="ProfilePage_topWidget" native="true">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>130</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">background-color: #121212;</string>
           </property>
@@ -2739,7 +2745,7 @@ QTabWidget::pane {
 }</string>
              </property>
              <property name="currentIndex">
-              <number>1</number>
+              <number>2</number>
              </property>
              <widget class="QWidget" name="Profile_Booking_Tab">
               <property name="styleSheet">
@@ -2886,7 +2892,7 @@ QTabWidget::pane {
                            <x>0</x>
                            <y>0</y>
                            <width>1062</width>
-                           <height>651</height>
+                           <height>628</height>
                           </rect>
                          </property>
                          <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -3022,7 +3028,7 @@ QPushButton:disabled {
 }</string>
                  </property>
                  <property name="currentIndex">
-                  <number>0</number>
+                  <number>2</number>
                  </property>
                  <widget class="QWidget" name="PersonalInformation_tab">
                   <attribute name="title">
@@ -3237,7 +3243,7 @@ QPushButton:disabled {
 </string>
               </property>
               <attribute name="title">
-               <string>Help</string>
+               <string>Car Management</string>
               </attribute>
               <layout class="QVBoxLayout" name="verticalLayout_20" stretch="1,8">
                <property name="spacing">
@@ -3312,7 +3318,7 @@ QLineEdit {
 }</string>
                  </property>
                  <property name="currentIndex">
-                  <number>0</number>
+                  <number>2</number>
                  </property>
                  <widget class="QWidget" name="AddNewCar_Tab">
                   <property name="styleSheet">
@@ -3359,7 +3365,7 @@ QLineEdit {
                       <property name="geometry">
                        <rect>
                         <x>0</x>
-                        <y>0</y>
+                        <y>-37</y>
                         <width>1073</width>
                         <height>641</height>
                        </rect>
@@ -3744,8 +3750,8 @@ QPushButton:disabled {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>83</width>
-                        <height>16</height>
+                        <width>1090</width>
+                        <height>593</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_24">
@@ -3766,6 +3772,176 @@ QPushButton:disabled {
                        </property>
                       </layout>
                      </widget>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                 <widget class="QWidget" name="ChangeInfo_tab">
+                  <property name="styleSheet">
+                   <string notr="true">QLabel {
+	font-size: 12pt;
+    max-width: 300px;
+	max-height: 30px;
+}
+QLineEdit {
+	min-width: 260px;
+    max-width: 290px;
+	margin-bottom: 15px;
+}</string>
+                  </property>
+                  <attribute name="title">
+                   <string>Change info</string>
+                  </attribute>
+                  <layout class="QVBoxLayout" name="verticalLayout_25" stretch="0,0">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <property name="leftMargin">
+                    <number>0</number>
+                   </property>
+                   <property name="topMargin">
+                    <number>30</number>
+                   </property>
+                   <property name="rightMargin">
+                    <number>10</number>
+                   </property>
+                   <property name="bottomMargin">
+                    <number>130</number>
+                   </property>
+                   <item>
+                    <layout class="QFormLayout" name="formLayout_3">
+                     <property name="horizontalSpacing">
+                      <number>25</number>
+                     </property>
+                     <property name="verticalSpacing">
+                      <number>5</number>
+                     </property>
+                     <property name="bottomMargin">
+                      <number>0</number>
+                     </property>
+                     <item row="0" column="0">
+                      <widget class="QLabel" name="Change_model_label">
+                       <property name="text">
+                        <string>Model</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1">
+                      <widget class="QLabel" name="Change_vehicleType_label">
+                       <property name="text">
+                        <string>Vehicle type</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QLineEdit" name="Change_model_LineEdit"/>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QLineEdit" name="Change_vehicleType_LineEdit"/>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QLabel" name="Change_FuelType_label">
+                       <property name="text">
+                        <string>Fuel type</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="1">
+                      <widget class="QLabel" name="Change_Transmission_label">
+                       <property name="text">
+                        <string>Transmission</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="0">
+                      <widget class="QLineEdit" name="Change_FuelType_LineEdit"/>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QLineEdit" name="Change_Transmission_LineEdit"/>
+                     </item>
+                     <item row="4" column="0">
+                      <widget class="QLabel" name="Change_class_label">
+                       <property name="text">
+                        <string>Car class</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="4" column="1">
+                      <widget class="QLabel" name="Change_specifications_label">
+                       <property name="text">
+                        <string>Specifications</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="5" column="0">
+                      <widget class="QLineEdit" name="Change_class_LineEdit"/>
+                     </item>
+                     <item row="5" column="1">
+                      <widget class="QLineEdit" name="Change_specifications_LineEdit"/>
+                     </item>
+                     <item row="6" column="0">
+                      <widget class="QLabel" name="Change_numPassengers_label">
+                       <property name="text">
+                        <string>Number of passengers</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="6" column="1">
+                      <widget class="QLabel" name="Change_price_label">
+                       <property name="text">
+                        <string>Price per day</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="7" column="0">
+                      <widget class="QLineEdit" name="Change_numPassengers_LineEdit"/>
+                     </item>
+                     <item row="7" column="1">
+                      <widget class="QLineEdit" name="Change_price_LineEdit"/>
+                     </item>
+                    </layout>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="saveChanges_car_button">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
+                     <property name="minimumSize">
+                      <size>
+                       <width>0</width>
+                       <height>75</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>250</width>
+                       <height>16777215</height>
+                      </size>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">QPushButton {
+        background-color: #ff7b00;
+        color: white;
+        border: none;
+        font-size: 30px;
+        border-radius: 6px;
+		margin-top: 20px;
+}
+QPushButton:hover {
+        background-color: #de6b00;
+}
+QPushButton:pressed {
+        background-color: #c45f00;
+}
+
+QPushButton:disabled {
+        background-color: #e37d34;
+        color: #d6d6d6;
+}</string>
+                     </property>
+                     <property name="text">
+                      <string>Save</string>
+                     </property>
                     </widget>
                    </item>
                   </layout>
