--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,7 +45,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="HomePage">
        <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0" columnstretch="0,1,9" rowminimumheight="10,0,0">
@@ -3356,6 +3356,9 @@ QLineEdit {
 	border: none;
 }</string>
                      </property>
+                     <property name="verticalScrollBarPolicy">
+                      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+                     </property>
                      <property name="widgetResizable">
                       <bool>true</bool>
                      </property>
@@ -3363,8 +3366,8 @@ QLineEdit {
                       <property name="geometry">
                        <rect>
                         <x>0</x>
-                        <y>0</y>
-                        <width>1080</width>
+                        <y>-46</y>
+                        <width>1097</width>
                         <height>641</height>
                        </rect>
                       </property>
@@ -4143,7 +4146,7 @@ QTabWidget::pane {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>1080</width>
+                        <width>998</width>
                         <height>1138</height>
                        </rect>
                       </property>
