--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1975,7 +1975,7 @@ font-weight: 700;</string>
                       </property>
                       <property name="font">
                        <font>
-                        <pointsize>13</pointsize>
+                        <pointsize>16</pointsize>
                        </font>
                       </property>
                       <property name="styleSheet">
@@ -2139,7 +2139,7 @@ color: gray;</string>
 font-size: 16px;
 border-radius: 13px;</string>
                 </property>
-                <layout class="QGridLayout" name="gridLayout_6" rowstretch="0,0,9,7" columnstretch="5,1,1">
+                <layout class="QGridLayout" name="gridLayout_6" rowstretch="0,0,9,8" columnstretch="5,1,1">
                  <property name="leftMargin">
                   <number>15</number>
                  </property>
@@ -2176,13 +2176,13 @@ border-radius: 13px;</string>
                    <property name="minimumSize">
                     <size>
                      <width>0</width>
-                     <height>247</height>
+                     <height>210</height>
                     </size>
                    </property>
                    <property name="maximumSize">
                     <size>
                      <width>16777215</width>
-                     <height>247</height>
+                     <height>210</height>
                     </size>
                    </property>
                    <property name="styleSheet">
@@ -2460,10 +2460,68 @@ padding-left: 7px;
                  <item row="3" column="0" colspan="3">
                   <widget class="QWidget" name="Order_widget_11" native="true">
                    <layout class="QFormLayout" name="formLayout">
+                    <property name="verticalSpacing">
+                     <number>10</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>10</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>55</number>
+                    </property>
                     <item row="0" column="0" colspan="2">
                      <widget class="QLabel" name="label_19">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>35</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>35</height>
+                       </size>
+                      </property>
                       <property name="text">
-                       <string>Your booking bonuses</string>
+                       <string>Your booking overview:</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QLabel" name="label_2">
+                      <property name="text">
+                       <string>✓ 24/7 Breakdown assistance</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="4" column="0">
+                     <widget class="QLabel" name="label_3">
+                      <property name="text">
+                       <string>✓ Returning the car with a full tank of fuel</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="3" column="0">
+                     <widget class="QLabel" name="label_4">
+                      <property name="text">
+                       <string>✓ Possibility to cancel your booking at any time</string>
+                      </property>
+                      <property name="wordWrap">
+                       <bool>true</bool>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="2" column="0">
+                     <widget class="QLabel" name="label_5">
+                      <property name="text">
+                       <string>✓ Unlimited mileage</string>
                       </property>
                      </widget>
                     </item>
@@ -2889,8 +2947,8 @@ QTabWidget::pane {
                           <rect>
                            <x>0</x>
                            <y>0</y>
-                           <width>1069</width>
-                           <height>648</height>
+                           <width>61</width>
+                           <height>35</height>
                           </rect>
                          </property>
                          <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -3366,8 +3424,8 @@ QLineEdit {
                       <property name="geometry">
                        <rect>
                         <x>0</x>
-                        <y>-46</y>
-                        <width>1097</width>
+                        <y>0</y>
+                        <width>508</width>
                         <height>641</height>
                        </rect>
                       </property>
@@ -3751,8 +3809,8 @@ QPushButton:disabled {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>1097</width>
-                        <height>585</height>
+                        <width>83</width>
+                        <height>16</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_24">
@@ -4079,8 +4137,8 @@ QTabWidget::pane {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>1097</width>
-                        <height>625</height>
+                        <width>100</width>
+                        <height>30</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_28">
