--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,7 +45,7 @@
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="HomePage">
        <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0" columnstretch="0,1,9" rowminimumheight="10,0,0">
@@ -631,7 +631,7 @@ background-color: orange;</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>253</width>
+                <width>200</width>
                 <height>1182</height>
                </rect>
               </property>
@@ -1423,8 +1423,8 @@ QCheckBox::indicator:checked {
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>774</width>
-                <height>872</height>
+                <width>100</width>
+                <height>30</height>
                </rect>
               </property>
               <property name="styleSheet">
@@ -1555,7 +1555,7 @@ QCheckBox::indicator:checked {
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>713</width>
+                   <width>570</width>
                    <height>1114</height>
                   </rect>
                  </property>
@@ -2679,18 +2679,24 @@ padding-left: 7px;
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>130</height>
+            <height>110</height>
            </size>
           </property>
           <property name="styleSheet">
            <string notr="true">background-color: #121212;</string>
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,6,0">
+           <property name="leftMargin">
+            <number>10</number>
+           </property>
            <property name="topMargin">
-            <number>11</number>
+            <number>10</number>
+           </property>
+           <property name="rightMargin">
+            <number>25</number>
            </property>
            <property name="bottomMargin">
-            <number>11</number>
+            <number>10</number>
            </property>
            <item>
             <widget class="QLabel" name="logoName_label">
@@ -2731,9 +2737,26 @@ padding-left: 7px;
             </spacer>
            </item>
            <item>
-            <widget class="QLabel" name="logout_label">
+            <widget class="QPushButton" name="logout_pushButton">
+             <property name="font">
+              <font>
+               <pointsize>13</pointsize>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton {
+	border: none;
+	border-bottom: 1px solid gray;
+}
+QPushButton::hover {
+	color: #808080;
+}
+QPushButton::pressed {
+	color: #666666;	
+}</string>
+             </property>
              <property name="text">
-              <string>123</string>
+              <string>Logout</string>
              </property>
             </widget>
            </item>
@@ -2947,8 +2970,8 @@ QTabWidget::pane {
                           <rect>
                            <x>0</x>
                            <y>0</y>
-                           <width>61</width>
-                           <height>35</height>
+                           <width>1069</width>
+                           <height>651</height>
                           </rect>
                          </property>
                          <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -3374,7 +3397,7 @@ QLineEdit {
 }</string>
                  </property>
                  <property name="currentIndex">
-                  <number>0</number>
+                  <number>1</number>
                  </property>
                  <widget class="QWidget" name="AddNewCar_Tab">
                   <property name="styleSheet">
@@ -3776,7 +3799,7 @@ QPushButton:disabled {
                    <string notr="true"/>
                   </property>
                   <attribute name="title">
-                   <string>Delete car</string>
+                   <string>Delete/change car</string>
                   </attribute>
                   <layout class="QVBoxLayout" name="verticalLayout_23">
                    <property name="spacing">
@@ -3809,8 +3832,8 @@ QPushButton:disabled {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>83</width>
-                        <height>16</height>
+                        <width>1097</width>
+                        <height>588</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_24">
@@ -4075,12 +4098,12 @@ QPushButton:disabled {
 QTabBar::tab {
     background-color: #212121;
     color: white;
-    padding: 10px 10px; 
+	padding: 10px 10px; 
     border: none;
 }
 
 QTabBar::tab:first {
-	margin-left: 0px;    
+	margin-left: 0px;
 }
 
 QTabBar::tab:selected {
@@ -4137,8 +4160,8 @@ QTabWidget::pane {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>100</width>
-                        <height>30</height>
+                        <width>1097</width>
+                        <height>628</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_28">
@@ -4149,7 +4172,7 @@ QTabWidget::pane {
                         <number>0</number>
                        </property>
                        <property name="topMargin">
-                        <number>0</number>
+                        <number>20</number>
                        </property>
                        <property name="rightMargin">
                         <number>0</number>
@@ -4194,7 +4217,7 @@ QTabWidget::pane {
 }</string>
                      </property>
                      <property name="verticalScrollBarPolicy">
-                      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOn</enum>
+                      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
                      </property>
                      <property name="widgetResizable">
                       <bool>true</bool>
@@ -4215,7 +4238,8 @@ QTabWidget::pane {
         padding: 4px;
         background-color: #2b2b2b;
         color: white;
-}</string>
+}
+</string>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_30" stretch="0,0,0,0,0,0,0,0,0,0,0">
                        <property name="spacing">
@@ -4269,7 +4293,8 @@ QTabWidget::pane {
                          <property name="styleSheet">
                           <string notr="true">QWidget *{
 	font-size: 14pt;
-}</string>
+}
+</string>
                          </property>
                          <layout class="QFormLayout" name="formLayout_4">
                           <property name="horizontalSpacing">
