--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -631,7 +631,7 @@ background-color: orange;</string>
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>200</width>
+                <width>253</width>
                 <height>1182</height>
                </rect>
               </property>
@@ -1423,8 +1423,8 @@ QCheckBox::indicator:checked {
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>100</width>
-                <height>30</height>
+                <width>22</width>
+                <height>16</height>
                </rect>
               </property>
               <property name="styleSheet">
@@ -2824,7 +2824,7 @@ QTabWidget::pane {
 }</string>
              </property>
              <property name="currentIndex">
-              <number>2</number>
+              <number>3</number>
              </property>
              <widget class="QWidget" name="Profile_Booking_Tab">
               <property name="styleSheet">
@@ -3397,7 +3397,7 @@ QLineEdit {
 }</string>
                  </property>
                  <property name="currentIndex">
-                  <number>1</number>
+                  <number>2</number>
                  </property>
                  <widget class="QWidget" name="AddNewCar_Tab">
                   <property name="styleSheet">
@@ -4217,7 +4217,7 @@ QTabWidget::pane {
 }</string>
                      </property>
                      <property name="verticalScrollBarPolicy">
-                      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+                      <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOn</enum>
                      </property>
                      <property name="widgetResizable">
                       <bool>true</bool>
@@ -4227,7 +4227,7 @@ QTabWidget::pane {
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>998</width>
+                        <width>1080</width>
                         <height>1138</height>
                        </rect>
                       </property>
